# Qt-

./: CMakeLists.txt  README.md  main.cpp  mycalculator.cpp  mycalculator.h  mycalculator.ui
